bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: value update is not a member of String
  litMessage()= lettre
  ^BDR2:3: error: not found: value lettre
  litMessage()= lettre
                ^BDR2:5: error: not found: value lettre
lettre match {
^